# firmware-pico

./: README.md
Aden/: README.md  main.py
Rain/motionsensor_mqtt_broker/: main.py
ayumi/: README.md
ayumi/2btns_2leds/: CMakeLists.txt  main.cpp
ayumi/btn_rgb_led/: CMakeLists.txt  main.cpp
ayumi/hello_lcd/src/: main.cpp
ayumi/pico_motion_lcd/: distance.py
benji/c/: CMakeLists.txt
benji/c/include/: alarm.h
benji/c/src/: alarm.c  main.c
benji/python/: main.py
benji/python/modules/: LCD_led_.py  alarm.py  hcsr04.py  joystick_pos.py  starwars_alarm.py
lars/: README.md
lars/mqtt-testing/: README.md
ludde/: README.md  hej
ludde/motionsensor/motionsensor_c/: CMakeLists.txt
ludde/motionsensor/motionsensor_c/include/: CMakeLists.txt  motionsensor.h  mqtt.h  wifi.h
ludde/motionsensor/motionsensor_c/libs/: CMakeLists.txt  lcd.h  lwipopts.h
ludde/motionsensor/motionsensor_c/lwip/: CMakeLists.txt
ludde/motionsensor/motionsensor_c/src/: CMakeLists.txt  main.c  motionsensor.c  mqtt.c  wifi.c  ¨
ludde/motionsensor/motionsensor_c/tests/: CMakeLists.txt  lcdtest.c  soniclcd.c  test_with_time_stamps.c  ultrasonic.c  wifi.c
ludde/motionsensor/motionsensor_cpp/: .gitignore
ludde/motionsensor/motionsensor_py/: '  main.py
ludde/motionsensor/motionsensor_py/modules/: buzzer_alarm.py  hcsr04.py  lcd_16x2.py
ludde/motionsensor_cpp/: CMakeLists.txt
naru/: CMakeLists.txt  main.c  motionsensor.c  motionsensor.py
naru/c_motion/: CMakeLists.txt  main2.c
naru/c_motion/include/: func.h  lcd.h  mqtt_config.h  wifi_config.h
naru/c_motion/src/: CMakeLists.txt  alarm.c  lcd.c  main.c  motion.c
rain/: README.md
rain/motion_sensor_cpp/: CMakeLists.txt  lcd.cpp  lcd.h  main.cpp
rain/motion_sensor_python/: main.py  mqtt_subscriber.py  mqtt_twilio.py
simon/: README.md  pico-client.py  server.py
simon/c/: CMakeLists.txt  README.md  main.c
simon/c/include/: pico_sensor.h
simon/c/src/: CMakeLists.txt  main.c  pico_sensor.c
simon/cpp/: README.md  main.cpp
simon/dev-c/: CMakeLists.txt  README.md
simon/dev-c/include/: jsonify.h  lwipopts.h  mqtt_connect.h  pico_sensor.h
simon/dev-c/src/: CMakeLists.txt  config_template.h  jsonify.c  main.c  mqtt_connect.c  old_main.c  pico_sensor.c
